docs(compliance): from working session on 2025-09-10

--- a/docs/Security-Compliance/Security-Controls/si/si-02-2.md
+++ b/docs/Security-Compliance/Security-Controls/si/si-02-2.md
@@ -5,9 +5,8 @@ Determine if system components have applicable security-relevant software and fi
 
 ## OPS Implementation
 
-OPS utilizes tooling including but not limited to Dependabot and Renovatebot which will automatically check for and detect security-relevant software updates on a frequent basis. These tools will automatically open pull requests if there is an update to any software or code library in use by OPS. Resulting pull requests are reviewed and remediated in a timely fashion as necessary. As part of the Continuous Integration and Continuous Deployment methodologies used by OPS, when these pull requests have met necessary requirements, the updates are automatically deployed. If there are no findings, no pull requests will be opened.
+OPS utilizes tooling including but not limited to ACF Tech security's Burp Suite, Dependabot and Renovatebot which will automatically check for and detect security-relevant software updates on a frequent basis. These tools will automatically open pull requests if there is an update to any software or code library in use by OPS. Resulting pull requests are reviewed and remediated in a timely fashion as necessary. As part of the Continuous Integration and Continuous Deployment methodologies used by OPS, when these pull requests have met necessary requirements, the updates are automatically deployed. If there are no findings, no pull requests will be opened.
 
-TODO: Seek inherited text
 
 ### Control Origination
 
