--- a/docs/Security-Compliance/Security-Controls/si/si-02.md
+++ b/docs/Security-Compliance/Security-Controls/si/si-02.md
@@ -15,6 +15,8 @@ Parts (a and b): See the OPS Configuration Management Plan for detailed document
 
 Parts (c and d):  OPS utilizes tooling including but not limited to Dependabot and Renovatebot which will automatically check for and detect security-relevant software updates on a frequent basis. These tools will automatically open pull requests if there is an update to any software or code library in use by OPS. Resulting pull requests are reviewed and remediated in a timely fashion as necessary. As part of the Continuous Integration and Continuous Deployment methodologies used by OPS, when these pull requests have met necessary requirements, the updates are automatically deployed. If there are no findings, no pull requests will be opened.
 
+OPS, through the ACF Tech security team, performs monthly vulnerability scans that provide reports which are used to check remediation status. OPS also performs all relevant security patches, updates, and hotfixes.
+
 Additionally, ACF Tech conducts regular and independent security testing.
 
 ### Control Origination
