--- a/docs/Security-Compliance/Security-Controls/si/si-03.md
+++ b/docs/Security-Compliance/Security-Controls/si/si-03.md
@@ -13,7 +13,9 @@ d. Address the receipt of false positives during malicious code detection and er
 
 ## OPS Implementation
 
-TODO: a. container signing in GH and/or Azure to help with some layers of malicious code prevention. seek inherited text from IaaS provider
+TODO: come up with some text
+
+container signing in GH and/or Azure to help with some layers of malicious code prevention. seek inherited text from IaaS provider
 
 b. updated based on whatever tooling A uses
 
