--- a/docs/Security-Compliance/Security-Controls/si/si-04-2.md
+++ b/docs/Security-Compliance/Security-Controls/si/si-04-2.md
@@ -5,10 +5,10 @@ Employ automated tools and mechanisms to support near real-time analysis of even
 
 ## OPS Implementation
 
-TODO: better language around OPS utilizes WAF, Defender for ____, LogWatch equivalent, and alerting around all of the above. Seek inherited text
+OPS and its Azure infrastructure (Azure Monitor and Azure Defender for Cloud) is integrated with ACF Tech's Splunk centralized logging system to detect and analyze events of interest.
 
 ### Control Origination
 
-Hybrid with IaaS vendor and OPS
+Inherited from Azure and ACF Tech.
 
 ### Related Content
