--- a/docs/Security-Compliance/Security-Controls/si/si-04-4.md
+++ b/docs/Security-Compliance/Security-Controls/si/si-04-4.md
@@ -7,12 +7,10 @@
 
 ## OPS Implementation
 
-TODO: Language around azure-equivalent of API gateway, azure resource groups, Azure WAF, Azure Database
-
-TODO: in-app logging of unusual events (i.e. requesting all user details)
+OPS and its Azure infrastructure (Azure's Application Gateway, Monitor, and Azure Defender for Cloud) is integrated with ACF Tech's Splunk centralized logging system to detect and analyze events of interest. These mechanisms including protections for inbound and outbound communications traffic.
 
 ### Control Origination
 
-Hybrid with IaaS vendor and OPS. Inherited from ACF Tech (AMS)
+Hybrid with Azure and ACF Tech (AMS)
 
 ### Related Content
