--- a/docs/Security-Compliance/Security-Controls/si/si-04-5.md
+++ b/docs/Security-Compliance/Security-Controls/si/si-04-5.md
@@ -10,12 +10,10 @@ iv. Boundary protection devices, such as firewalls, gateways, and routers.
 
 ## OPS Implementation
 
-TODO: Reference IR plan
-
-TODO: Provide evidence of IaaS alerting settings
+OPS and its Azure infrastructure (Azure's Application Gateway, Monitor, and Azure Defender for Cloud) is integrated with ACF Tech's Splunk centralized logging system to detect and analyze events of interest. Please also reference the OPS Incident Response Plan, which is included in the ATO package, for additional documentation addressing this control.
 
 ### Control Origination
 
-Hybrid with IaaS vendor and OPS. Inherited from ACF Tech (AMS)
+Inherited from Azure, ACF Tech (Splunk).
 
 ### Related Content
