--- a/docs/Security-Compliance/Security-Controls/si/si-04.md
+++ b/docs/Security-Compliance/Security-Controls/si/si-04.md
@@ -21,14 +21,10 @@ g. Provide [Audit records, Input from malicious code protection mechanisms, data
 
 ## OPS Implementation
 
-OPS and its Azure infrastructure is integrated with ACF Tech's Splunk centralized logging system to detect and analyze events of interest.
-
-TODO: Seek inherited text from Azure and ACF Tech (AMS). Go back and update CA-07 when done.
-
-TODO: f and g: Seek ACF Tech guidance?   Azure inheritance?
+OPS and its Azure infrastructure (Azure Monitor and Azure Defender for Cloud) is integrated with ACF Tech's Splunk centralized logging system to detect and analyze events of interest.
 
 ### Control Origination
 
-Hybrid with IaaS vendor and OPS. Inherited from ACF
+Inherited from Azure and ACF Tech.
 
 ### Related Content
