--- a/docs/Security-Compliance/Security-Controls/si/si-05.md
+++ b/docs/Security-Compliance/Security-Controls/si/si-05.md
@@ -8,15 +8,11 @@ d. Implement security directives in accordance with established time frames, or 
 
 ## OPS Implementation
 
-TODO: text around IaaS vendor alerts, dependabot, renovatebot, reference security policy that points to HHS policy
-
-TODO: seek inherited text from IaaS vendor, ACF Tech, generate other text
-
-ACF/OPRE Incident Response team also communicates relevant alerts, advisories, and directives at their discretion
+ACF/OPRE Incident Response team communicates relevant alerts, advisories, and directives at their discretion. Azure may also send security notices as well regarding the ACF Tech Azure tenant.
 
 ### Control Origination
 
-Hybrid with IaaS vendor and OPS. Inherited from ACF Tech.
+Inherited from ACF Tech.
 
 ### Related Content
 Note: See HHS Policy for Vulnerability Management.
