--- a/docs/Security-Compliance/Security-Controls/si/si-07.md
+++ b/docs/Security-Compliance/Security-Controls/si/si-07.md
@@ -7,11 +7,13 @@ b. Take the following actions when unauthorized changes to the software, firmwar
 
 ## OPS Implementation
 
-TODO: Seek inherited text. OPS dependencies are pinned to certain versions and where possible, sha signature of versions. container signing in place and used as part of CD processes. Other controls around configuration, protection. and logging of IaaS resources would apply as well
+OPS software dependencies are pinned to specific versions and where possible, utlilzing SHA signature hashes of those versions rather than semantic numeric versions. container signing in place and used as part of CD processes. 
+
+TODO: logging of IaaS resources in azure, SI-03 text, configuration management plam
 
 ### Control Origination
 
-Hybrid with IaaS vendor and OPS. Inherited from ACF Tech (AMS)
+Inherited from ACF Tech and Azure.
 
 ### Related Content
 
