--- a/docs/Security-Compliance/Security-Controls/si/si-10.md
+++ b/docs/Security-Compliance/Security-Controls/si/si-10.md
@@ -15,7 +15,13 @@ iii. Parameter and character validity checks – Checks to verify that any param
 
 ## OPS Implementation
 
-TODO: need some text around Vest, SQL Alchemy, and other input sanitization techniques, front end served from static files, do not operate a separate web server. See any inherited text
+OPS validates information input at muliple layers within the application itself including tools such as Vest, which enforces integrity and validation of content and syntax provided from direct user input in the browser. Additionally, the OPS backend application utilizes tools such as SQL Alchemy which sanitizes input provided to the backend and protects against numerous forms of injection and manipulation attacks.
+
+TODO: Azure Application Gateway..
+
+Input validations protection mechanisms are also monitored on a monthly basis through ACF Tech vulnerability scanning.
+
+
 
 ### Control Origination
 
