--- a/docs/Security-Compliance/Security-Controls/si/si-11.md
+++ b/docs/Security-Compliance/Security-Controls/si/si-11.md
@@ -12,6 +12,6 @@ OPS error messages renedered to OPS users do not disclose exploitable or vulnera
 
 ### Control Origination
 
-Hybrid with IaaS vendor, ACF Tech (AMS), and OPS
+Hybrid with Azure, ACF Tech (AMS), and OPS
 
 ### Related Content
