--- a/docs/Security-Compliance/Security-Controls/si/si-12.md
+++ b/docs/Security-Compliance/Security-Controls/si/si-12.md
@@ -23,6 +23,6 @@ TODO: Check list of artifacts and revise as needed
 
 ### Control Origination
 
-Hybrid with IaaS provider, OPRE, and OPS
+Hybrid with Azure, OPRE, and OPS
 
 ### Related Content
