--- a/docs/Security-Compliance/Security-Controls/si/si-16.md
+++ b/docs/Security-Compliance/Security-Controls/si/si-16.md
@@ -5,10 +5,10 @@ Implement the following controls to protect the system memory from unauthorized 
 
 ## OPS Implementation
 
-TODO: Seek inherited text
+Inherited from Azure
 
 ### Control Origination
 
-IaaS provider
+Inherited from Azure and ACF Tech (Splunk, AMS)
 
 ### Related Content
