--- a/docs/Security-Compliance/Security-Controls/sr/sr-02-1.md
+++ b/docs/Security-Compliance/Security-Controls/sr/sr-02-1.md
@@ -5,10 +5,10 @@ Establish a supply chain risk management team consisting of [ACF-defined personn
 
 ## OPS Implementation
 
-TODO: ???
+Inherited from ACF Tech
 
 ### Control Origination
 
-Hybrid with IaaS vendor and OPS. Inherited from ACF Tech (AMS)
+Inherited from ACF Tech
 
 ### Related Content
