--- a/docs/Security-Compliance/Security-Controls/sr/sr-02.md
+++ b/docs/Security-Compliance/Security-Controls/sr/sr-02.md
@@ -7,10 +7,10 @@ c. Protect the supply chain risk management plan from unauthorized disclosure an
 
 ## OPS Implementation
 
-TODO: seek template
+Inherited from ACF Tech
 
 ### Control Origination
 
-Hybrid with IaaS vendor and OPS. Inherited from ACF Tech (AMS)
+Inherited from ACF Tech
 
 ### Related Content
