--- a/docs/Security-Compliance/Security-Controls/sr/sr-03.md
+++ b/docs/Security-Compliance/Security-Controls/sr/sr-03.md
@@ -7,11 +7,11 @@ c. Document the selected and implemented supply chain processes and controls in 
 
 ## OPS Implementation
 
-TODO: ???
+Inherited from ACF Tech
 
 ### Control Origination
 
-Hybrid with IaaS vendor and OPS. Inherited from ACF Tech (AMS)
+Inherited from ACF Tech
 
 ### Related Content
 Consult the HHS Policy for Cyber Supply Chain Risk Management
