--- a/docs/Security-Compliance/Security-Controls/sr/sr-05.md
+++ b/docs/Security-Compliance/Security-Controls/sr/sr-05.md
@@ -5,10 +5,10 @@ Employ the following acquisition strategies, contract tools, and procurement met
 
 ## OPS Implementation
 
-TODO: ???
+Inherited from ACF Tech
 
 ### Control Origination
 
-Hybrid with IaaS vendor and OPS. Inherited from ACF Tech (AMS)
+Inherited from ACF Tech
 
 ### Related Content
