--- a/docs/Security-Compliance/Security-Controls/sr/sr-08.md
+++ b/docs/Security-Compliance/Security-Controls/sr/sr-08.md
@@ -5,10 +5,10 @@ Establish agreements and procedures with entities involved in the supply chain f
 
 ## OPS Implementation
 
-TODO: ???
+Inherited from ACF Tech
 
 ### Control Origination
 
-Hybrid with IaaS vendor and OPS. Inherited from ACF Tech (AMS)
+Inherited from ACF Tech
 
 ### Related Content
