--- a/docs/Security-Compliance/Security-Controls/sr/sr-10.md
+++ b/docs/Security-Compliance/Security-Controls/sr/sr-10.md
@@ -5,10 +5,10 @@ Inspect the following systems or system components [ACF Selection of (one or mor
 
 ## OPS Implementation
 
-TODO: seek inherited text.  text about container signing, prescriptive IaC/drift. ???
+Inherited from ACF Tech
 
 ### Control Origination
 
-Hybrid with IaaS vendor and OPS. Inherited from ACF Tech (AMS)
+Inherited from ACF Tech
 
 ### Related Content
