--- a/docs/Security-Compliance/Security-Controls/sr/sr-11-1.md
+++ b/docs/Security-Compliance/Security-Controls/sr/sr-11-1.md
@@ -5,10 +5,10 @@ Train [all System Engineers, ISSOs, System Owners and other System POCs as well 
 
 ## OPS Implementation
 
-TODO: seek inherited text
+Inherited from ACF Tech
 
 ### Control Origination
 
-Inherited from OPRE
+Inherited from ACF Tech
 
 ### Related Content
