--- a/docs/Security-Compliance/Security-Controls/sr/sr-11-2.md
+++ b/docs/Security-Compliance/Security-Controls/sr/sr-11-2.md
@@ -5,10 +5,10 @@ Maintain configuration control over the following system components awaiting ser
 
 ## OPS Implementation
 
-TODO: seek inherited text
+Inherited from ACF Tech
 
 ### Control Origination
 
-Hybrid with IaaS vendor and OPS-???. Inherited from ACF Tech (AMS)
+Inherited from ACF Tech
 
 ### Related Content
