--- a/docs/Security-Compliance/Security-Controls/sr/sr-11.md
+++ b/docs/Security-Compliance/Security-Controls/sr/sr-11.md
@@ -6,10 +6,10 @@ b. Report counterfeit system components to [source of counterfeit component [CIS
 
 ## OPS Implementation
 
-TODO: seek inherited text and ask Tim??
+Inherited from ACF Tech
 
 ### Control Origination
 
-Hybrid with IaaS vendor and OPS. Inherited from ACF Tech (AMS)
+Inherited from ACF Tech
 
 ### Related Content
