--- a/docs/Security-Compliance/Security-Controls/sr/sr-12.md
+++ b/docs/Security-Compliance/Security-Controls/sr/sr-12.md
@@ -5,11 +5,11 @@ Dispose of [HHS/ACF data, documentation, tools, or system components] using the 
 
 ## OPS Implementation
 
-TODO: seek inherited text.  Data? keys? retention policies?
+Inherited from ACF Tech and Azure
 
 ### Control Origination
 
-Hybrid with IaaS vendor and OPS. Inherited from ACF Tech (AMS)
+Inherited from ACF Tech and Azure
 
 ### Related Content
 Disposal may occur at any stages during the SDLC. Examples of methods for disposing include disk cleaning, removal of cryptographic keys, partial reuse of components, etc
