--- a/docs/Security-Compliance/Security-Controls/si/si-07-1.md
+++ b/docs/Security-Compliance/Security-Controls/si/si-07-1.md
@@ -5,10 +5,14 @@ Perform an integrity check of [system software, firmware, and applications deeme
 
 ## OPS Implementation
 
-TODO: container signing verbiage from si-7. consider what needs to be done for data integrity?
+OPS only utilizes and works only with HHS/ACF whitelisted and approved Azure products and services to address this control's requirement.
+
+Integrity checks as per ACF's requirement are performed on a monthly basis as part of ACF Tech security's vulnerability scan. Utilization of new software and IaaS components is logged in GitHub and Azure (respectively). Software dependency verifications are performed at build-time as part of the CI/CD process.
+
+TODO: container signing verbiage from si-7 and si-3.
 
 ### Control Origination
 
-Hybrid with IaaS vendor and OPS. Inherited from ACF Tech (AMS)
+Inherited from ACF Tech and Azure.
 
 ### Related Content
