--- a/docs/Security-Compliance/Security-Controls/sr/sr-06.md
+++ b/docs/Security-Compliance/Security-Controls/sr/sr-06.md
@@ -5,10 +5,10 @@ Assess and review the supply chain-related risks associated with suppliers or co
 
 ## OPS Implementation
 
-TODO: ???
+Inherited from ACF Tech
 
 ### Control Origination
 
-Hybrid with IaaS vendor and OPS. Inherited from ACF Tech (AMS)
+Inherited from ACF Tech
 
 ### Related Content
