additional SI cleanup

--- a/docs/Security-Compliance/Security-Controls/si/si-07-1.md
+++ b/docs/Security-Compliance/Security-Controls/si/si-07-1.md
@@ -5,14 +5,10 @@ Perform an integrity check of [system software, firmware, and applications deeme
 
 ## OPS Implementation
 
-OPS only utilizes and works only with HHS/ACF whitelisted and approved Azure products and services to address this control's requirement.
-
-Integrity checks as per ACF's requirement are performed on a monthly basis as part of ACF Tech security's vulnerability scan. Utilization of new software and IaaS components is logged in GitHub and Azure (respectively). Software dependency verifications are performed at build-time as part of the CI/CD process.
-
-TODO: container signing verbiage from si-7 and si-3.
+See the implemenation text of [si-07](si-07.md).
 
 ### Control Origination
 
-Inherited from ACF Tech and Azure.
+Hybrid with Azure, ACF Tech (AMS and Splunk), and OPS.
 
 ### Related Content
