--- a/docs/Security-Compliance/Security-Controls/si/si-07.md
+++ b/docs/Security-Compliance/Security-Controls/si/si-07.md
@@ -7,13 +7,21 @@ b. Take the following actions when unauthorized changes to the software, firmwar
 
 ## OPS Implementation
 
-OPS software dependencies are pinned to specific versions and where possible, utlilzing SHA signature hashes of those versions rather than semantic numeric versions. container signing in place and used as part of CD processes. 
+The firmware aspects of this control are all implemented by Azure.
 
-TODO: logging of IaaS resources in azure, SI-03 text, configuration management plam
+With regards to software (code, builds, images):
+
+OPS employs cryptographic provenance and signing for builds and container images. GitHub Actions generates artifact attestations (SLSA v1 Build L2 by default) and signed SBOM attestations for each build; attestations are published alongside images in GHCR. CI/CD gates verify these attestations before deploying to Azure Container Apps (ACA). 
+
+Deployments pin images in scripts to ensure the exact verified artifact is deployed and executed. CI checks that the digest matches the scanned/provenanced image. 
+
+The OPS GitHub repository also enforces integrity: required signed commits, PR review, and required status checks on protected branches/tags. GitHub environments gate pull request merging with required reviewers. 
+
+See the OPS Configuration Management Plan for more details on the implementation of this control. 
 
 ### Control Origination
 
-Inherited from ACF Tech and Azure.
+Hybrid with Azure, ACF Tech (AMS and Splunk), and OPS.
 
 ### Related Content
 
