--- a/docs/Security-Compliance/Security-Controls/si/si-10.md
+++ b/docs/Security-Compliance/Security-Controls/si/si-10.md
@@ -15,9 +15,21 @@ iii. Parameter and character validity checks – Checks to verify that any param
 
 ## OPS Implementation
 
-OPS validates information input at muliple layers within the application itself including tools such as Vest, which enforces integrity and validation of content and syntax provided from direct user input in the browser. Additionally, the OPS backend application utilizes tools such as SQL Alchemy which sanitizes input provided to the backend and protects against numerous forms of injection and manipulation attacks.
+OPS validates information input at muliple layers within the application itself including tools such as Vest, which enforces integrity and validation of content and syntax provided from direct user input in the browser. Additionally, the OPS backend application utilizes tools such as SQL Alchemy which sanitizes input provided to the backend and protects against numerous forms of injection and manipulation attacks. Validation complements—not replaces—parameterization and context-aware encoding.
 
-TODO: Azure Application Gateway..
+At the infrastructure layer, Boundary input validation is heavily provided by the Azure Application Gateway:
+
+* Managed rules: The WAF policy within the Application Gateway runs a strong ruleset to detect and block common input attacks (SQLi, XSS, protocol violations). “Method enforcement” and “Known CVEs” rule groups are enabled. Policy operates in Prevention mode. 
+
+* Body inspection & limits: The HTTP request body inspection is enabled. Max request body and file-upload limits are set to match OPRE and application needs.
+
+* Content types: WAF validates JSON, XML, multipart/form-data, and x-www-form-urlencoded request bodies. 
+
+Additionally, the Azure Container Apps provide these implementations:
+
+* Schema validation: APIs enforce OpenAPI/JSON Schema validation (e.g., Ajv or equivalent), including canonicalization.
+
+* Canonicalization: Inputs are normalized (Unicode, path) before validation to avoid bypasses. 
 
 Input validations protection mechanisms are also monitored on a monthly basis through ACF Tech vulnerability scanning.
 
@@ -25,6 +37,6 @@ Input validations protection mechanisms are also monitored on a monthly basis th
 
 ### Control Origination
 
-Hybrid with IaaS provider and OPS
+Hybrid with Azure and OPS
 
 ### Related Content
