--- a/docs/Security-Compliance/Security-Controls/si/si-03.md
+++ b/docs/Security-Compliance/Security-Controls/si/si-03.md
@@ -13,18 +13,65 @@ d. Address the receipt of false positives during malicious code detection and er
 
 ## OPS Implementation
 
-TODO: come up with some text
+Part a:<br />
+The system employs both signature-based and non-signature-based protections at logical entry/exit points of the application and its CI/CD path:
 
-container signing in GH and/or Azure to help with some layers of malicious code prevention. seek inherited text from IaaS provider
+**Container image supply chain (entry point to runtime):**
 
-b. updated based on whatever tooling A uses
+Pre-deployment image scanning occurs in GitHub Actions for every Pull Request and branch build. The workflow runs  SAST and additional scanning tools to scan container images (OS packages + language deps + secrets), failing builds on policy-defined severities. Because container images are hosted in GHCR, we enforce scanning in the Continuous Integration (CI) pipeline.
 
-c. put some text in about [container scanning tools]
+**Application ingress / user content (entry to data layer):**
 
-d. System Owners will review alerts from tooling and document any false positives within the tool.
+OPS does not execute user-supplied content. All file uploads are scanned for hygiene before being stored in Azure Blob Storage.
+
+**Runtime anomaly/threat detection (non-signature-based):**
+
+Aspects of the Azure subscription are onboarded to Microsoft Defender for Cloud. While Azure Container Apps (ACA) is a serverless container platform, Defender for Cloud provides threat-protection capabilities across containerized environments and integrates alerts into Azure Monitor. These alerts are also streamed to ACF Tech's Splunk environment.
+
+**Logging and telemetry (exit/monitoring point):**
+
+All ACA console and system logs streamed to Azure Log Analytics Workspace (LAW) and ultimately to ACF Tech's Splunk environment where ACF Tech can monitor and provide any alerting or observability.
+
+
+Part b:<br />
+
+Security scanning tools used in the CI pipeline are automatically updated on regular intervals. Versions are pinned to specific versions to maintain integrity. 
+
+Azure Defender for Cloud maintains malware engines/signatures and analytics automatically as a managed service; no local signature management is performed by OPS. 
+
+
+Part c:<br />
+**Periodic scans (organization-defined frequency):**
+
+On-upload scanning pipeline for any user-supplied files to Blob Storage (triggered by events) blocks further storage and access until an object is marked clean.  ACF Tech conducts periodic vulnerability and penetration/DAST scans.
+
+**Actions on detection (block/quarantine/take action):**
+
+CI gate: Builds fail and deployments are blocked when container scans exceed policy thresholds.
+
+Blob uploads: Items with positive detections are quarantined (moved to a quarantine container) and not processed; clean items flow to an allow-listed container. 
+GitHub
+
+Threat detections (service): Defender for Cloud generates security alerts for suspicious activity; these alerts flow into Azure Monitor for triage and incident response. 
+
+**Alerting to organizational roles:**
+
+ACA diagnostics (ContainerAppConsoleLogs and ContainerAppSystemLogs) are sent to the Azure Log Analytics Workspace and then streamed to ACF Tech's Splunk environment for their processing and review.
+
+**Hardening to reduce malware execution likelihood (non-signature controls):**
+
+Containers run as non-root with least privilege; images are minimal (distroless where feasible); and the filesystem for app containers is configured read-only where supported. 
+
+See the OPS Configuration Management Plan for more details on the implementation of this control. 
 
 ### Control Origination
 
-Hybrid with IaaS vendor and OPS. Inherited from ACF Tech (AMS)
+Hybrid with Azure, ACF Tech (AMS and Splunk), and OPS.
 
 ### Related Content
+
+System entry and exit points include firewalls, remote access servers, workstations, electronic mail servers, web servers, proxy servers, notebook computers, and mobile devices. Malicious code includes viruses, worms, Trojan horses, and spyware. Malicious code can also be encoded in various formats contained within compressed or hidden files or hidden in files using techniques such as steganography. Malicious code can be inserted into systems in a variety of ways, including by electronic mail, the world-wide web, and portable storage devices. Malicious code insertions occur through the exploitation of system vulnerabilities. A variety of technologies and methods exist to limit or eliminate the effects of malicious code.
+
+Malicious code protection mechanisms include both signature- and nonsignature-based technologies. Nonsignature-based detection mechanisms include artificial intelligence techniques that use heuristics to detect, analyze, and describe the characteristics or behavior of malicious code and to provide controls against such code for which signatures do not yet exist or for which existing signatures may not be effective. Malicious code for which active signatures do not yet exist or may be ineffective includes polymorphic malicious code (i.e., code that changes signatures when it replicates). Nonsignature-based mechanisms also include reputation-based technologies. In addition to the above technologies, pervasive configuration management, comprehensive software integrity controls, and anti-exploitation software may be effective in preventing the execution of unauthorized code. Malicious code may be present in commercial off-the-shelf software as well as custom-built software and could include logic bombs, backdoors, and other types of attacks that could affect organizational mission and business functions.
+
+In situations where malicious code cannot be detected by detection methods or technologies, organizations rely on other types of controls, including secure coding practices, configuration management and control, trusted procurement processes, and monitoring practices to ensure that software does not perform functions other than the functions intended. Organizations may determine that, in response to the detection of malicious code, different actions may be warranted. For example, organizations can define actions in response to malicious code detection during periodic scans, the detection of malicious downloads, or the detection of maliciousness when attempting to open or execute files.
